progress on ctonroller
