# backend/api/models/dtos/response.go
@@ -1,0 +1,7 @@
+package dtos
+
+type Response struct {
+	DomainErrorCode int         `json:"domainErrorCode"`
+	Data            interface{} `json:"data"`
+	Message         string      `json:"message"`
+}
