# backend/docs/swagger.json
@@ -1,21 +1,75 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server server.",
+        "description": "REST API server for Borealis aka 'the Feedback' app",
         "title": "Borealis",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "contact": {},
         "version": "2.0"
     },
-    "host": "localhost:3000",
-    "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/api/v1/events": {
+            "get": {
+                "description": "Creates an event",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Event"
+                ],
+                "summary": "Creates an event",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dtos.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dtos.Event"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Response"
+                        }
+                    },
+                    "419": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Response"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "dtos.Event": {
+            "type": "object"
+        },
+        "dtos.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "domainErrorCode": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
